// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js - flow-verify 1`] = `
/* @providesModule IncrModuleA */
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @providesModule IncrModuleA */

`;

exports[`b.js - flow-verify 1`] = `
/* @providesModule IncrModuleB
   @flow
*/

var A = require('IncrModuleA');
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @providesModule IncrModuleB
   @flow
*/

var A = require("IncrModuleA");

`;

exports[`dup_a.js - flow-verify 1`] = `
/* @providesModule IncrModuleA */

var x:string = 0;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @providesModule IncrModuleA */

var x: string = 0;

`;
